--- a/DGBar.Application/appsettings.json
+++ b/DGBar.Application/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "SqliteConnection": {
+    "SqliteConnectionString": "Data Source=DGBar.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
