--- a/DGBar.Service/DGBar.Service.csproj
+++ b/DGBar.Service/DGBar.Service.csproj
@@ -8,4 +8,10 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DGBar.Application\DGBar.Application.csproj" />
+    <ProjectReference Include="..\DGBar.Domain\DGBar.Domain.csproj" />
+    <ProjectReference Include="..\DGBar.Infrastructure.Data\DGBar.Infrastructure.Data.csproj" />
+  </ItemGroup>
+
 </Project>
