--- a/DGBar.Domain/DGBar.Domain.csproj
+++ b/DGBar.Domain/DGBar.Domain.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="FluentValidation.AspNetCore" Version="9.1.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DGBar.Domain.DTO\DGBar.Domain.DTO.csproj" />
+  </ItemGroup>
+
 </Project>
