--- a/API/DGBar.Application/appsettings.json
+++ b/API/DGBar.Application/appsettings.json
@@ -9,5 +9,20 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IpRateLimiting": {
+    "EnableEndpointRateLimiting": false,
+    "StackBlockedRequests": false,
+    "RealIpHeader": "X-Real-IP",
+    "ClientIdHeader": "X-ClientId",
+    "HttpStatusCode": 500,
+    "QuotaExceededMessage": "Oops, Something very bad went wrong and the server couldn't respond.",
+    "GeneralRules": [
+      {
+        "Endpoint": "*",
+        "Period": "5s",
+        "Limit": 3
+      }
+    ]
+  }
 }
