Authentication JWT Token

--- a/API/DGBar.Application/appsettings.json
+++ b/API/DGBar.Application/appsettings.json
@@ -16,7 +16,7 @@
     "RealIpHeader": "X-Real-IP",
     "ClientIdHeader": "X-ClientId",
     "HttpStatusCode": 500,
-    "QuotaExceededMessage": "Oops, Something very bad went wrong and the server couldn't respond.",
+    "QuotaExceededMessage": "Excedido limite de acessos, por favor tente novamente em alguns segundos.",
     "GeneralRules": [
       {
         "Endpoint": "*",
